<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VacunasSub02">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/vacTitle"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kids"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bss1"
                android:onClick="passBCGS2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/bcg"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/bss2"
                android:onClick="passHEPBS2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/hepatitisB"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/bss3"
                android:onClick="passPENTAVALENTES2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/pentavalente"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/bss4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/dpt"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/bss5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/rotavirus"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/bss6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/neumococo"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/bss7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/influenza"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/bss8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/vtp"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/bss9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/sabin"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/bss10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/sr"
                android:textAlignment="textStart" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>