<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ATD">

    <TextView
        android:id="@+id/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:text="@string/tdAD"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="370dp"
        android:layout_height="136dp"
        android:layout_marginTop="20dp"
        android:text="@string/tdADDescription"
        app:layout_constraintEnd_toEndOf="@+id/TitleText"
        app:layout_constraintStart_toStartOf="@+id/TitleText"
        app:layout_constraintTop_toBottomOf="@+id/TitleText" />

    <TextView
        android:id="@+id/fechas"
        android:layout_width="370dp"
        android:layout_height="136dp"
        android:layout_marginTop="10dp"
        android:text="@string/tdADTime"
        app:layout_constraintEnd_toEndOf="@+id/description"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Ya he recibido la vacuna."
        app:layout_constraintEnd_toEndOf="@+id/fechas"
        app:layout_constraintStart_toStartOf="@+id/fechas"
        app:layout_constraintTop_toBottomOf="@+id/fechas" />

</androidx.constraintlayout.widget.ConstraintLayout>